--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     //DB connection
@@ -31,6 +32,14 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     //DB migration utils
     implementation 'org.liquibase:liquibase-core'
+    // tests
+    testImplementation 'io.rest-assured:rest-assured'
+    testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'io.rest-assured:rest-assured'
+    implementation 'org.jsoup:jsoup:1.14.3'
+
+
 }
 
 tasks.named('test') {
