--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Employees
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=22Bibigon06
 
 spring.liquibase.change-log=classpath:db/changelog/changelog.yaml
 
