--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,16 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: to-do-list
-    ports: [ '5432:5432' ]
+    ports: [ '5438:5432' ]
+
+  app:
+    build: .
+    image: mynodeapp
+    depends_on:
+      - db
+    ports:
+      - '8080:8080'
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/to-do-list
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=password
