Added default user

--- a/src/main/resources/db/changelog/changelog.yaml
+++ b/src/main/resources/db/changelog/changelog.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: //db/changelog/migration/v0001.sql
+  - include:
+      file: //db/changelog/migration/v0002.sql
