Switched to rsa auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=password
 spring.liquibase.change-log=classpath:db/changelog/changelog.yaml
 
 spring.sql.init.mode=always
+
+rsa.private-key=certs/private_key.pem
+rsa.public-key=certs/public_key.pem
