--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,15 @@ services:
       POSTGRES_DB: to-do-list
     ports: [ '5438:5432' ]
 
-#  app:
-#    build: .
-#    image: todolist
-#    depends_on:
-#      - db
-#    ports:
-#      - '8080:8080'
-#    environment:
-#        SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/to-do-list
-#        SPRING_DATASOURCE_USERNAME: user
-#        SPRING_DATASOURCE_PASSWORD: password
-#        SECRET_KEY: ${SECRET_KEY}
+  app:
+    build: .
+    image: todolist
+    depends_on:
+      - db
+    ports:
+      - '8080:8080'
+    environment:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/to-do-list
+        SPRING_DATASOURCE_USERNAME: user
+        SPRING_DATASOURCE_PASSWORD: password
+        SECRET_KEY: ${SECRET_KEY}
